[gd_scene load_steps=16 format=3 uid="uid://bj2kfy31qak10"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_juxps"]
[ext_resource type="FontFile" uid="uid://dapdd7bt7gjcl" path="res://fonts/Symtext.ttf" id="2_2tqj7"]
[ext_resource type="Texture2D" uid="uid://dpux8xh3d6ujb" path="res://FREE RPG Icon Pack - 100+ Accessories and Armor - Clockwork Raven Studios/icons64x64.png" id="3_k5yl3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwrr"]
atlas = ExtResource("3_k5yl3")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_knlko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwrr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4abic"]
atlas = ExtResource("3_k5yl3")
region = Rect2(192, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rsxfr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4abic")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8u7go"]
atlas = ExtResource("3_k5yl3")
region = Rect2(0, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gsn5h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u7go")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5dht7"]
atlas = ExtResource("3_k5yl3")
region = Rect2(128, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rwtp8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dht7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_shapi"]
atlas = ExtResource("3_k5yl3")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6hi76"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shapi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_37gew"]
atlas = ExtResource("3_k5yl3")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyvbk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37gew")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_juxps")

[node name="Gold" type="Label" parent="."]
offset_left = 15.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Gold: 0"

[node name="QuestStatus" type="Label" parent="."]
offset_left = 5.0
offset_top = 185.0
offset_right = 95.0
offset_bottom = 204.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Quest: None"

[node name="QuestGoal" type="Label" parent="."]
offset_left = 154.0
offset_top = 185.0
offset_right = 198.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Goal: "

[node name="Potions" type="Label" parent="."]
offset_left = 143.0
offset_top = 2.0
offset_right = 221.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Potions: 0"

[node name="Armor" type="Label" parent="."]
offset_left = 312.0
offset_top = 185.0
offset_right = 352.0
offset_bottom = 208.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Armor:"

[node name="Metal" type="Label" parent="."]
offset_left = 251.0
offset_top = 2.0
offset_right = 382.0
offset_bottom = 25.0
theme_override_fonts/font = ExtResource("2_2tqj7")
theme_override_font_sizes/font_size = 8
text = "Metal Fragments: 0"

[node name="Boots1" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(353, 191)
scale = Vector2(0.128907, 0.128907)
sprite_frames = SubResource("SpriteFrames_knlko")

[node name="Boots2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(353, 191)
scale = Vector2(0.117187, 0.117187)
sprite_frames = SubResource("SpriteFrames_rsxfr")

[node name="Chest1" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(363, 191)
scale = Vector2(0.171875, 0.171875)
sprite_frames = SubResource("SpriteFrames_gsn5h")

[node name="Chest2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(362, 191)
scale = Vector2(0.132812, 0.132812)
sprite_frames = SubResource("SpriteFrames_rwtp8")

[node name="Helmet1" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(373, 191)
scale = Vector2(0.117188, 0.117188)
sprite_frames = SubResource("SpriteFrames_6hi76")

[node name="Helmet2" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(373, 191)
scale = Vector2(0.113281, 0.113281)
sprite_frames = SubResource("SpriteFrames_fyvbk")
